Kubernetes/istio/blue-green-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-api-virtual-service
spec:
  hosts:
    - "api.ashutosh.systems"
  gateways:
    - imageprocessing-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: auth-service
            port:
              number: 4000
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /dashboard
      route:
        - destination:
            host: auth-service
            port:
              number: 4000
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /process-image
      route:
        - destination:
            host: image-processing-service-blue # traffic will go to this to image-processing-service-blue if weight is 100
            port:
              number: 8080
          weight: 100
        - destination:
            host: image-processing-service-green # Traffic will not go to this to image-processing-service-green if weight is 0
            port:
              number: 8080
          weight: 0
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /image-upload
      route:
        - destination:
            host: react-frontend-service
            port:
              number: 80
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
