Kubernetes/istio/faulty-virtual-services.yaml
# VirtualService for API with fault injection for auth-service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-api-virtual-service
spec:
  hosts:
    - "api.ashutosh.systems"
  gateways:
    - imageprocessing-gateway
  http:
    - match:
        - uri:
            prefix: /auth
      fault:
        delay:
          percentage:
            value: 10.0 # 10% of the requests will be delayed
          fixedDelay: 5s # 5 seconds delay
        abort:
          percentage:
            value: 5.0 # 5% of the requests will be aborted
          httpStatus: 500 # HTTP 500 Internal Server Error
      route:
        - destination:
            host: auth-service
            port:
              number: 4000
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /dashboard
      fault:
        delay:
          percentage:
            value: 10.0 # 10% of the requests will be delayed
          fixedDelay: 5s # 5 seconds delay
        abort:
          percentage:
            value: 5.0 # 5% of the requests will be aborted
          httpStatus: 500 # HTTP 500 Internal Server Error
      route:
        - destination:
            host: auth-service
            port:
              number: 4000
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /process-image
      route:
        - destination:
            host: image-processing-service
            port:
              number: 8080
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
    - match:
        - uri:
            prefix: /image-upload
      route:
        - destination:
            host: react-frontend-service
            port:
              number: 80
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - POST
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"

---
# VirtualService for Frontend
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-frontend-virtual-service
spec:
  hosts:
    - "ashutosh.systems"
  gateways:
    - imageprocessing-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: react-frontend-service
            port:
              number: 80
      corsPolicy:
        allowOrigins:
          - regex: "https://.*"
        allowMethods:
          - GET
          - OPTIONS
        allowHeaders:
          - content-type
          - authorization
        allowCredentials: true
        maxAge: "24h"
