Kubernetes/istio/kiali-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "ashutosh.systems"
  gateways:
    - default/imageprocessing-gateway
  http:
    - match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            host: kiali
            port:
              number: 20001
